Some magic code clean up from VSCode.